--- a/libnanomsg/libnanomsg.cabal
+++ b/libnanomsg/libnanomsg.cabal
@@ -27,6 +27,7 @@ library
     base >= 4.5 && < 5,
     bytestring >= 0.9.0 && < 0.11,
     ghc-prim,
+    primitive,
     text
 
   default-extensions:
@@ -66,4 +67,5 @@ library
     Libnanomsg.Level
     Libnanomsg.Option
     Libnanomsg.Protocol
+    Libnanomsg.SendFlags
     Libnanomsg.Transport
