--- a/nanomsg-haskell.cabal
+++ b/nanomsg-haskell.cabal
@@ -36,14 +36,18 @@ library
   default-language:  Haskell2010
   exposed-modules:
     Nanomsg
-    Nanomsg.Binary
-  default-extensions:  ForeignFunctionInterface, DeriveDataTypeable
+    -- Nanomsg.Binary
+  default-extensions:
+    DeriveDataTypeable
+    ForeignFunctionInterface
+    LambdaCase
   includes:          nanomsg/nn.h
   extra-libraries:   nanomsg
   build-depends:
     base >= 4.5 && < 5,
     bytestring >= 0.9.0 && < 0.11,
-    binary >= 0.7 && < 0.9
+    binary >= 0.7 && < 0.9,
+    libnanomsg
 
 test-suite tests
   type:              exitcode-stdio-1.0
