--- a/nanomsg-haskell.cabal
+++ b/nanomsg-haskell.cabal
@@ -41,13 +41,15 @@ library
     DeriveDataTypeable
     ForeignFunctionInterface
     LambdaCase
+    ViewPatterns
   includes:          nanomsg/nn.h
   extra-libraries:   nanomsg
   build-depends:
     base >= 4.5 && < 5,
     bytestring >= 0.9.0 && < 0.11,
     binary >= 0.7 && < 0.9,
-    libnanomsg
+    libnanomsg,
+    text
 
 test-suite tests
   type:              exitcode-stdio-1.0
