--- a/libnanomsg/libnanomsg.cabal
+++ b/libnanomsg/libnanomsg.cabal
@@ -27,8 +27,7 @@ library
     base >= 4.5 && < 5,
     bytestring >= 0.9.0 && < 0.11,
     ghc-prim,
-    primitive,
-    text
+    primitive
 
   default-extensions:
     DataKinds
