--- a/libnanomsg/libnanomsg.cabal
+++ b/libnanomsg/libnanomsg.cabal
@@ -27,7 +27,8 @@ library
     base >= 4.5 && < 5,
     bytestring >= 0.9.0 && < 0.11,
     ghc-prim,
-    primitive
+    primitive,
+    text
 
   default-extensions:
     DataKinds
