--- a/nanomsg-haskell.cabal
+++ b/nanomsg-haskell.cabal
@@ -49,8 +49,7 @@ library
     bytestring >= 0.9.0 && < 0.11,
     binary >= 0.7 && < 0.9,
     libnanomsg,
-    primitive,
-    text
+    primitive
 
 test-suite tests
   type:              exitcode-stdio-1.0
